refactor: Remove CSV generation and directly create table data